; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_i_sound.c_I_SoundSetTimer.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_i_sound.c_I_SoundSetTimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.itimerval = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32, i64 }
%struct.TYPE_3__ = type { i32, i64 }
%struct.sigaction = type { i32, i32 }

@I_HandleSoundTimer = common dso_local global i32 0, align 4
@SA_RESTART = common dso_local global i32 0, align 4
@sig = common dso_local global i32 0, align 4
@itimer = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"I_SoundSetTimer: interrupt n.a.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @I_SoundSetTimer(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.itimerval, align 8
  %4 = alloca %struct.itimerval, align 8
  %5 = alloca %struct.sigaction, align 4
  %6 = alloca %struct.sigaction, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %8 = load i32, i32* @I_HandleSoundTimer, align 4
  %9 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %5, i32 0, i32 1
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* @SA_RESTART, align 4
  %11 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %5, i32 0, i32 0
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* @sig, align 4
  %13 = call i32 @sigaction(i32 %12, %struct.sigaction* %5, %struct.sigaction* %6)
  %14 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %3, i32 0, i32 1
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = load i32, i32* %2, align 4
  %17 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %3, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  %19 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %3, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  store i64 0, i64* %20, align 8
  %21 = load i32, i32* %2, align 4
  %22 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %3, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load i32, i32* @itimer, align 4
  %25 = call i32 @setitimer(i32 %24, %struct.itimerval* %3, %struct.itimerval* %4)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp eq i32 %26, -1
  br i1 %27, label %28, label %31

28:                                               ; preds = %1
  %29 = load i32, i32* @stderr, align 4
  %30 = call i32 @fprintf(i32 %29, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  br label %31

31:                                               ; preds = %28, %1
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local i32 @sigaction(i32, %struct.sigaction*, %struct.sigaction*) #1

declare dso_local i32 @setitimer(i32, %struct.itimerval*, %struct.itimerval*) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
